Link agregado para conjuntos

--- a/noveno/estadistica/graficos.html
+++ b/noveno/estadistica/graficos.html
@@ -191,26 +191,29 @@
 						</div>
 						<br>								
 				</div>
+				<div class="page" id="histograma">
+
+				</div>
 			<div class="bot-nav-bar">
 			     	<!-- Colored mini FAB button -->
 				    <button onClick="slidePage('#tipos_graficos');" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-				     1
+				     <i class="material-icons">home</i>
 				    </button>
 				    <!-- Colored mini FAB button -->
 				    <button onClick="slidePage('#diagrama_circular');" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-				     2
+				    1
 				    </button>
 				    <button onClick="slidePage('#diagrama_barras');" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-				     3
+				     2
 				    </button>
 				    <button onClick="slidePage('#histograma');" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-				     4
+				     3
 				    </button>
 				    <button onClick="slidePage('#poligono_frecuencia');" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-				     5
+				     4
 				    </button>
 				    <button onClick="slidePage('#diagrama_lineas');" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-				     6
+				     5
 				    </button>
 
 			    </div>		
