--- a/noveno/index.html
+++ b/noveno/index.html
@@ -70,7 +70,7 @@
 						      <td class="mdl-data-table__cell--non-numeric">2</td>
 						      <td>Conjunto de los números reales</td>
 						      <td>Potenciación<br>Base real con exponente racional<br></td>
-						       <td><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"><i class="material-icons">play_arrow</i></a></td>
+						       <td><a href="conjuntos/" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"><i class="material-icons">play_arrow</i></a></td>
 						    </tr>
 						    <tr>
 						      <td class="mdl-data-table__cell--non-numeric">3</td>
