--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         		<div class="mdl-cell mdl-cell--12-col">
   		    	<h4>BIENVENIDO A</h4>
   		      	<h1 class="bold"><span class="math">Math</span><span class="app">App</span></h1>
-  		      	<h4>
+  		      	<h4 class="text-center">
   					Una aplicación desarrollada para ayudar a los estudiantes de 9° grado en la asignatura de matemática.
   				</h4>
   				<div class="separator"></div>
@@ -71,7 +71,7 @@
             <h1 >
               <span class="math">Math</span><span class="app">App</span>
             </h1>
-            <h5>
+            <h5 class="text-white">
                 Es una aplicación web desarrollada por alumnos de 9° grado del colegio parroquial San Agustín de la ciudad de Ocotal con la colaboración del ingeniero de sistemas Miguel Angel Castillo con la finalidad de brindar a los estudiantes un recurso de estudio gratuito en línea que ayude a mejorar el rendimiento de los estudiantes en la asignatura de matemática.
             </h5>
               <div class="separator"></div>
