--- a/noveno/estadistica/index.html
+++ b/noveno/estadistica/index.html
@@ -77,7 +77,7 @@
 						<a href="tablas.html" class="list-group-item">2. Tablas de frecuencia</a>
 						<a href="graficos.html" class="list-group-item">3. Gráficos</a>
 						<a href="medidas_posicion.html" class="list-group-item">4. Medidas de posición</a>
-						<a href="medidas_dispercion.html" class="list-group-item">5. Mediadas de dispersión</a>
+						<a href="medidas_dispersion.html" class="list-group-item">5. Mediadas de dispersión</a>
 					</div>
 		    	</div>			
 	    	</div>
@@ -88,7 +88,9 @@
 		    		<div class="list-group">
 					 	<a href="video_variables.html" class="list-group-item">Video variables estadisticas</a>
 						<a href="video_tablas_frecuencia.html" class="list-group-item">Video tablas de frecuencia</a>	
-						<a href=""></a>			
+						<a class="list-group-item" href="video_graficos.html">Gráficos</a>	
+						<a class="list-group-item" href="video_medidas_posicion.html">Medidas de posición</a>
+						<a class="list-group-item" href="video_medidas_dispersion.html">Medidas de dispersión</a>
 					</div>
 		    	</div>			
 	    	</div>
