--- a/noveno/estadistica/tablas.html
+++ b/noveno/estadistica/tablas.html
@@ -46,7 +46,7 @@
   </div>
   <main class="mdl-layout__content">
   		<div class="page-content"><!-- Your content goes here -->
-			<div class="content">
+			<div class="page first" id="primera">
 				<div class="mdl-grid">
 					<div class="mdl-cell mdl-cell--12-col">
 						<h4 class="text-center">Tablas de frecuencia</h4><br>
@@ -185,6 +185,159 @@
 						</p>
 					</div>
 				</div>			
+			</div>
+			<div class="page" id="segunda">
+				<h4 class="text-center">Tablas de frecuencia con datos agrupados</h4>
+				<p>
+					La distribución de frecuencias agrupadas o tabla con datos agrupados se emplea si las variables toman un número grande de valores o la variable es continua. <br> Se agrupan los valores en intervalos que tengan la misma amplitud denominados clases. A cada clase se le asigna su frecuencia correspondiente.
+				</p>
+				<h5>
+					Limites de la clase
+				</h5>
+				<p>
+					Cada clase está delimitada por el límite inferior de la clase y el límite superior de la clase.
+				</p>
+				<h5>
+					Amplitud de la clase
+				</h5>
+				<p>La amplitud de la clase es la diferencia entre el límite superior e inferior de la clase.</p>
+				<h5>Marca de clase</h5>
+				<p>La marca de clase es el punto medio de cada intervalo y es el valor que representa a todo el intervalo para el cálculo de algunos parámetros.</p>
+				<h5>Construcción de una tabla de datos agrupados</h5>
+				<ol>
+					<li>
+						 Se localizan los valores menor y mayor de la distribución. En este caso son 3 y 48.
+					</li>
+					<li>
+						Se restan y se busca un número entero un poco mayor que la diferencia y que sea divisible por el número de intervalos de queramos poner.
+					</li>
+				</ol>
+				
+				<p style="padding: 20px 40px; font-weight: bold;">3, 15, 24, 28, 33, 35, 38, 42, 43, 38, 36, 34, 29, 25, 17, 7, 35, 36, 39, 44, 31, <br> 26, 20, 11, 13, 22, 27, 47, 39, 37, 34, 32, 35, 28, 38, 41, 48, 15, 32, 13.</p>				
+				<p>
+					Es conveniente que el número de intervalos oscile entre 6 y 15.
+					En este caso, 48 - 3 = 45, incrementamos el número hasta 50 : 5 = 10 intervalos.
+					Se forman los intervalos teniendo presente que el límite inferior de una clase pertenece al intervalo, pero el límite superior no pertenece intervalo, se cuenta en el siguiente intervalo.
+					<br>
+					En este caso, 48 - 3 = 45, incrementamos el número hasta 50 : 5 = 10 intervalos.
+					<br>
+					Se forman los intervalos teniendo presente que el límite inferior de una clase pertenece al intervalo, pero el límite superior no pertenece intervalo, se cuenta en el siguiente intervalo.
+				</p>
+				<div class="row">
+					<div class="col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3">
+						
+				<table class="table table-bordered">
+              		<tbody>
+              			<tr>
+		                    <td style="width: 16.6667%;">&nbsp;</td>
+		                    <th style="width: 16.6667%;">c<sub>i</sub></th>
+		                    <th style="width: 16.6667%;">f<sub>i</sub></th>
+		                    <th style="width: 16.6667%;">F<sub>i</sub></th>
+		                    <th style="width: 16.6667%;">n<sub>i</sub></th>
+		                    <th style="width: 16.6667%;">N<sub>i</sub></th>
+	                  	</tr>
+                  		<tr>
+		                    <th style="width: 16.6667%;">[0, 5)</th>
+		                    <td style="width: 16.6667%;">2.5</td>
+		                    <td style="width: 16.6667%;">1</td>
+		                    <td style="width: 16.6667%;">1</td>
+		                    <td style="width: 16.6667%;">0.025</td>
+		                    <td style="width: 16.6667%;">0.025</td>
+                      	</tr>
+                      	<tr>
+	                        <th style="width: 16.6667%;">[5, 10)</th>
+	                        <td style="width: 16.6667%;">7.5</td>
+	                        <td style="width: 16.6667%;">1</td>
+	                        <td style="width: 16.6667%;">2</td>
+	                        <td style="width: 16.6667%;">0.025</td>
+	                        <td style="width: 16.6667%;">0.050</td>
+                      	</tr>
+	                  	<tr>
+		                    <th style="width: 16.6667%;">[10, 15)</th>
+		                    <td style="width: 16.6667%;">12.5</td>
+		                    <td style="width: 16.6667%;">3</td>
+		                    <td style="width: 16.6667%;">5</td>
+		                    <td style="width: 16.6667%;">0.075</td>
+		                    <td style="width: 16.6667%;">0.125</td>
+	                  	</tr>
+                      	<tr>
+	                        <th style="width: 16.6667%;">[15, 20)</th>
+	                        <td style="width: 16.6667%;">17.5</td>
+	                        <td style="width: 16.6667%;">3</td>
+	                        <td style="width: 16.6667%;">8</td>
+	                        <td style="width: 16.6667%;">0.075</td>
+	                        <td style="width: 16.6667%;">0.200</td>
+                     	</tr>
+                      	<tr>
+	                        <th style="width: 16.6667%;">[20, 25)</th>
+	                        <td style="width: 16.6667%;">22.5</td>
+	                        <td style="width: 16.6667%;">3</td>
+	                        <td style="width: 16.6667%;">11</td>
+	                        <td style="width: 16.6667%;">0.075</td>
+	                        <td style="width: 16.6667%;">0.2775</td>
+                      	</tr>
+                      	<tr>
+	                        <th style="width: 16.6667%;">[25, 30)</th>
+	                        <td style="width: 16.6667%;">27.5</td>
+	                        <td style="width: 16.6667%;">6</td>
+	                        <td style="width: 16.6667%;">17</td>
+	                        <td style="width: 16.6667%;">0.150</td>
+	                        <td style="width: 16.6667%;">0.425</td>
+                      	</tr>
+                 		<tr>
+	                        <th style="width: 16.6667%;">[30, 35)</th>
+	                        <td style="width: 16.6667%;">32.5</td>
+	                        <td style="width: 16.6667%;">7</td>
+	                        <td style="width: 16.6667%;">24</td>
+	                        <td style="width: 16.6667%;">0.175</td>
+	                        <td style="width: 16.6667%;">0.600</td>
+                      	</tr>
+                      	<tr>
+	                        <th style="width: 16.6667%;">[35, 40)</th>
+	                        <td style="width: 16.6667%;">37.5</td>
+	                        <td style="width: 16.6667%;">10</td>
+	                        <td style="width: 16.6667%;">34</td>
+	                        <td style="width: 16.6667%;">0.250</td>
+	                        <td style="width: 16.6667%;">0.850</td>
+                      	</tr>
+                      	<tr>
+	                        <th style="width: 16.6667%;">[40, 45)</th>
+	                        <td style="width: 16.6667%;">42.5</td>
+	                        <td style="width: 16.6667%;">4</td>
+	                        <td style="width: 16.6667%;">38</td>
+	                        <td style="width: 16.6667%;">0.100</td>
+	                        <td style="width: 16.6667%;">0.950</td>
+                      	</tr>
+                      	<tr>
+	                        <th style="width: 16.6667%;">[45, 50)</th>
+	                        <td style="width: 16.6667%;">47.5</td>
+	                        <td style="width: 16.6667%;">2</td>
+	                        <td style="width: 16.6667%;">40</td>
+	                        <td style="width: 16.6667%;">0.050</td>
+	                        <td style="width: 16.6667%;">1</td>
+                      	</tr>
+                      	<tr>
+	                        <td style="width: 16.6667%;">&nbsp;</td>
+	                        <td style="width: 16.6667%;">&nbsp;</td>
+	                        <th style="color: rgb(153, 0, 0); width: 16.6667%;">40</th>
+	                        <td style="width: 16.6667%;">&nbsp;</td>
+	                        <th style="color: rgb(153, 0, 0); width: 16.6667%;">1</th>
+	                        <td style="width: 16.6667%;">&nbsp;</td>
+                      	</tr>
+		                  	</tbody>
+		                </table>
+					</div>
+				</div>
+			</div>
+			<div class="bot-nav-bar">
+				<!-- Colored mini FAB button -->
+				<button onClick= "slidePage('#primera');" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+				1
+				</button>
+				<!-- Colored mini FAB button -->
+				<button onClick= "slidePage('#segunda');" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+				  2
+				</button>
 			</div>
 		</div>
 	</main>
