Carpeta de factorizacion agregada

--- a/noveno/factorizacion/index.html
+++ b/noveno/factorizacion/index.html
@@ -73,11 +73,8 @@
 	    	<div class="mdl-grid"><!--Inicio de la cuadricula-->
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
-					 	<a href="variables.html" class="list-group-item">1. Variable estadistica</a>
-						<a href="tablas.html" class="list-group-item">2. Tablas de frecuencia</a>
-						<a href="graficos.html" class="list-group-item">3. Gráficos</a>
-						<a href="medidas_posicion.html" class="list-group-item">4. Medidas de posición</a>
-						<a href="medidas_dispersion.html" class="list-group-item">5. Mediadas de dispersión</a>
+					 	<a href="variables.html" class="list-group-item">1. Factor común</a>
+						
 					</div>
 		    	</div>			
 	    	</div>
@@ -99,7 +96,7 @@
 	    	<div class="mdl-grid"><!--Inicio de la cuadricula-->
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
-					 	<a href="ejercicio-1.html" class="list-group-item">Ejercicio 1</a>
+					 	<a href="variables.html" class="list-group-item">Ejercicio 1</a>
 						<a href="" class="list-group-item">Ejercicio 2</a>						
 					</div>
 		    	</div>			
