--- a/noveno/index.html
+++ b/noveno/index.html
@@ -27,14 +27,22 @@
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
-     
+	 	 <nav class="mdl-navigation mdl-layout--large-screen-only">
+	    <!-- Colored FAB button with ripple -->
+			<a href="../" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-button--mini-fab">
+			 <i class="material-icons">arrow_back</i>
+			</a>
+	   </nav>
     </div>
   </header>
   	<div class="mdl-layout__drawer">
 	    <span class="mdl-layout-title">MathApp</span>
 	    <nav class="mdl-navigation">
-      		<a class="mdl-navigation__link" href="../">Inicio</a>
-	      	<a class="mdl-navigation__link" href="">Unidades</a>
+      		<a class="mdl-navigation__link" href="../">Estadística</a>
+	      	<a class="mdl-navigation__link" href="">Números reales</a>
+	      	<a class="mdl-navigation__link" href="../">Factorización</a>
+	      	<a class="mdl-navigation__link" href="../">Radicación</a>
+	      	<a class="mdl-navigation__link" href="../">Geometría</a>
 	    </nav>
  	</div>
 		<main class="mdl-layout__content">
@@ -74,14 +82,14 @@
 						    </tr>
 						    <tr>
 						      <td class="mdl-data-table__cell--non-numeric">3</td>
-						      <td>Radicación</td>
+						      <td>Factorización</td>
 						      <td>N/A</td>
 						       <td><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"><i class="material-icons">play_arrow</i></a>
 						       </td>
 						    </tr>
 						    <tr>
 						    	<td>5</td>
-						    	<td>Factorización</td>
+						    	<td>Radicación</td>
 						    	<td>N/A</td>
 						    	<td><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"><i class="material-icons">play_arrow</i></a>
 						       </td>
