Menu de contenido modificado

--- a/noveno/index.html
+++ b/noveno/index.html
@@ -38,11 +38,11 @@
   	<div class="mdl-layout__drawer">
 	    <span class="mdl-layout-title">MathApp</span>
 	    <nav class="mdl-navigation">
-      		<a class="mdl-navigation__link" href="../">Estadística</a>
-	      	<a class="mdl-navigation__link" href="">Números reales</a>
-	      	<a class="mdl-navigation__link" href="../">Factorización</a>
-	      	<a class="mdl-navigation__link" href="../">Radicación</a>
-	      	<a class="mdl-navigation__link" href="../">Geometría</a>
+      		<a class="mdl-navigation__link" href="estadistica/">Estadística</a>
+	      	<a class="mdl-navigation__link" href="conjuntos/">Números reales</a>
+	      	<a class="mdl-navigation__link" href="factorizacion/">Factorización</a>
+	      	<a class="mdl-navigation__link" href="radicacion/">Radicación</a>
+	      	<a class="mdl-navigation__link" href="geometria/">Geometría</a>
 	    </nav>
  	</div>
 		<main class="mdl-layout__content">
