C:\Users\HFG\Documents\preoyectos\mathapp\noveno\conjuntos

--- a/noveno/conjuntos/index.html
+++ b/noveno/conjuntos/index.html
@@ -87,7 +87,12 @@
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
 					 	<a href="video_potenciacion.html" class="list-group-item">Video de potenciación</a>
-						<a href="video_BR.html" class="list-group-item">video de Base real con exponente racional</a>	
+							
+						<a href="numre.html" class="list-group-item">video de Numeros reales</a>
+						<a href="video_expent.html" class="list-group-item">video de Potencia de base real y exponente entero</a>
+						<a href="video_BR.html" class="list-group-item">video de Base real con exponente racional</a>
+						<a href="plantilla_prora.html" class="list-group-item">video de Propiedades de los radicales</a>
+						<a href="plantilla_opera.html" class="list-group-item">video de Operaciones con radicales</a>
 
 									
 					</div>
