--- a/noveno/conjuntos/plantilla_propiedades.html
+++ b/noveno/conjuntos/plantilla_propiedades.html
@@ -44,7 +44,7 @@
   </div>
   <main class="mdl-layout__content">
     <div class="page-content"><!-- Your content goes here -->
-    	<div class="page first" id="primera"> <h4>propiedades o leyes de los radicales</h4> <br>
+    	<div class="page first" id="primera"> <h4>propiedades o leyes de los radicales</h4> 
         <p>Producto de los radicales...radicales del mismo indice <br> 
         Para multiplicar radicales con el mismo índice se multiplican los radicandos y se deja el mismo índice. <br><br>
         <img src="imgs/fracb1.jpg"> <br> <br>
