Cambio de nombre a las paginas de la carpeta conjuntos

--- a/noveno/conjuntos/index.html
+++ b/noveno/conjuntos/index.html
@@ -38,8 +38,11 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Estadistica</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="../../">Inicio</a>
-      <a class="mdl-navigation__link" href="../">Unidades</a>
+      	<a class="mdl-navigation__link" href="numeros_reales.html">Números reales</a>
+		<a class="mdl-navigation__link" href="pagina.html">Potencia de base real y exponente entero</a>
+		<a class="mdl-navigation__link" href="pagina.html">Base real y exponente racional</a>
+		<a class="mdl-navigation__link" href="pagina.html">Propiedades de los radicales</a>
+		<a class="mdl-navigation__link" href="pagina.html">Operaciones con radicales</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
@@ -62,7 +65,7 @@
     				</li>
     				<li>
 	    				<a href="javascript:show('#ejercicios');" class="">
-		    				<img src="../../img/pencil-icon.png" alt="">
+	    					<img src="../../img/pencil-icon.png" alt="">
 							<p>Ejercicios</p>
 		    			</a>	
     				</li>
@@ -73,11 +76,11 @@
 	    	<div class="mdl-grid"><!--Inicio de la cuadricula-->
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
-					 	<a href="plantilla.html" class="list-group-item">1. Numeros reales</a>
-						<a href="plantilla_expent.html" class="list-group-item">2. Potencia de base real y exponente entero</a>
-						<a href="plantilla_br.html" class="list-group-item">3. Base real y  exponente racional</a>
-						<a href="plantilla_propiedades.html" class="list-group-item">4. Propiedades de los radicales</a>
-						<a href="plantilla_opradi.html" class="list-group-item">5. operaciones con radicales</a> 
+					 	<a href="numeros_reales.html" class="list-group-item">1. Numeros reales</a>
+						<a href="base_real_y_exponente_entero.html" class="list-group-item">2. Potencia de base real y exponente entero</a>
+						<a href="base_real_y_exponente_racional.html" class="list-group-item">3. Base real y  exponente racional</a>
+						<a href="propiedades_de_radicales.html" class="list-group-item">4. Propiedades de los radicales</a>
+						<a href="operaciones_con_radicales.html" class="list-group-item">5. Operaciones con radicales</a> 
 					</div>
 		    	</div>			
 	    	</div>
@@ -88,8 +91,8 @@
 		    		<div class="list-group">
 					 	<a href="video_potenciacion.html" class="list-group-item">Video de potenciación</a>
 							
-						<a href="numre.html" class="list-group-item">video de Numeros reales</a>
-						<a href="video_expent.html" class="list-group-item">video de Potencia de base real y exponente entero</a>
+						<a href="video_numeros_reales.html" class="list-group-item">video de Numeros reales</a>
+						<a href="video_base_real_y_exponente_entero.html" class="list-group-item">video de Potencia de base real y exponente entero</a>
 						<a href="video_BR.html" class="list-group-item">video de Base real con exponente racional</a>
 						<a href="plantilla_prora.html" class="list-group-item">video de Propiedades de los radicales</a>
 						<a href="plantilla_opera.html" class="list-group-item">video de Operaciones con radicales</a>
