Nombres de archivos correjidos 1

--- a/noveno/estadistica/index.html
+++ b/noveno/estadistica/index.html
@@ -38,14 +38,16 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Estadística</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="../../">Inicio</a>
-      <a class="mdl-navigation__link" href="../">Unidades</a>
+    	<a class="mdl-navigation__link" href="variable.html">Variable estadística</a>  
+    	<a class="mdl-navigation__link" href="tablas.html">Tablas de frecuencia</a>
+    	<a class="mdl-navigation__link" href="graficos.html">Gráficos</a>
+    	<a class="mdl-navigation__link" href="medidas_posicion.html">Medidas de posición</a>
+    	<a class="mdl-navigation__link" href="medidas_dispersion.html">Medidas de dispersión</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
     <div class="page-content"><!-- Your content goes here -->
-    	<div class="mdl-grid">
-    		
+    	<div class="mdl-grid">    		
     		<div class="mdl-cell mdl-cell--12-col">
     			<ul class="content-options">
     				<li class="active">
