--- a/noveno/conjuntos/index.html
+++ b/noveno/conjuntos/index.html
@@ -89,17 +89,14 @@
 	    	<div class="mdl-grid"><!--Inicio de la cuadricula-->
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
-					 	<a href="video_potenciacion.html" class="list-group-item">Video de potenciación</a>
-							
+					 	<a href="video_potenciacion.html" class="list-group-item">Video de potenciación</a>							
 						<a href="video_numeros_reales.html" class="list-group-item">video de Numeros reales</a>
 						<a href="video_base_real_y_exponente_entero.html" class="list-group-item">video de Potencia de base real y exponente entero</a>
-						<a href="video_BR.html" class="list-group-item">video de Base real con exponente racional</a>
-						<a href="plantilla_prora.html" class="list-group-item">video de Propiedades de los radicales</a>
-						<a href="plantilla_opera.html" class="list-group-item">video de Operaciones con radicales</a>
-
-									
+						<a href="video_base_real_y_exponente_racional.html" class="list-group-item">video de Base real con exponente racional</a>6
+						<a href="video_propiedades_de_radicales.html" class="list-group-item">video de Propiedades de los radicales</a>
+						<a href="video_operaciones_con_radicales.html" class="list-group-item">video de Operaciones con radicales</a>
 					</div>
-		    	</div>			
+		    	</div>
 	    	</div>
     	</div>
     	<div class="page" id="ejercicios">
@@ -107,7 +104,7 @@
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
 					 	<a href="variables.html" class="list-group-item">Ejercicio 1</a>
-						<a href="" class="list-group-item">Ejercicio 2</a>						
+						<a href="" class="list-group-item">Ejercicio 2</a>			
 					</div>
 		    	</div>			
 	    	</div>
