--- a/noveno/conjuntos/numeros_reales.html
+++ b/noveno/conjuntos/numeros_reales.html
@@ -29,7 +29,7 @@
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only">
         <!-- Colored FAB button with ripple -->
-			<a href="../" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-button--mini-fab">
+			<a href="index.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-button--mini-fab">
 			 <i class="material-icons">arrow_back</i>
 			</a>
        </nav>
