Se agregaron los ejercicios 1 y 2 de la unidad de estadistica

--- a/noveno/estadistica/index.html
+++ b/noveno/estadistica/index.html
@@ -96,17 +96,16 @@
 					</div>
 		    	</div>			
 	    	</div>
-    	</div>
+    	</div>b
     	<div class="page" id="ejercicios">
 	    	<div class="mdl-grid"><!--Inicio de la cuadricula-->
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
 					 	<a href="ejercicio-1.html" class="list-group-item">Ejercicio 1</a>
-						<a href="" class="list-group-item">Ejercicio 2</a>						
 					</div>
 		    	</div>			
 	    	</div>
-    	</div>
+    	</d iv>
     </div>
   </main>
 </div>
