--- a/noveno/estadistica/ejercicio-1.html
+++ b/noveno/estadistica/ejercicio-1.html
@@ -16,6 +16,9 @@
 	<!--Archivos de la aplicación-->
 	<link rel="stylesheet" type="text/css" href="../../css/app.css">
 	<script type="text/javascript" src="../../js/app.js"></script>
+  <!--Archivos de SweetAlert-->
+  <link rel="stylesheet" href="../../plugins/sweetalert/sweetalert.css">
+  <script src="../../plugins/sweetalert/sweetalert.min.js"></script>
 </head>
 <body>
 	<!-- Always shows a header, even in smaller screens. -->
@@ -43,16 +46,286 @@
     </nav>
   </div>
   <main class="mdl-layout__content">
+    <h4 class="text-center">Escoge el tipo de variable estadística de que se habla en cada caso</h4>
     <div class="page-content"><!-- Your content goes here -->
-    	<div class="page first" id="1">
-    		<h5 class="text-center">Deporte favorito</h5>
-    		<label><input type="radio" name="respuesta_1"> Variable cualitativa nominal </label><br>
-    		<label><input type="radio" name="respuesta_1"> Variable cuantitativa ordinal </label><br>
-    		<label><input type="radio" name="respuesta_1"> Variable cuantitativa discreta </label><br>
-    		<label><input type="radio" name="respuesta_1"> Variable cuantitativa continua </label><br>
-    	</div>
+        <div class="page first" id="1">
+          <h4 class="text-center"><strong>Deporte favorito</strong></h4>
+          <div class="opciones">
+            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+              <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="1"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+            </label>
+            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+              <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="1"><span class="mdl-radio__label">Variable cualitativa ordinal</span>
+            </label>
+            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+              <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="1"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+            </label>
+             <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+              <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="1"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+            </label>
+          </div>
+        </div>
+        <div class="page" id="2">
+          <h4 class="text-center"><strong>Medalla de plata ganada en una competición deportiva.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="2"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="2"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="2"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="2"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="3">
+          <h4 class="text-center"><strong>Peso de cinco amigos.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="3"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="3"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="3"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="3"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="4">
+          <h4 class="text-center"><strong>Color de ojos de diez amigos.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="4"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="4"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="4"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="4"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="5">
+          <h4 class="text-center"><strong>Número de mascotas de 3 amigos.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="5"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="5"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="5"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="5"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="6">
+          <h4 class="text-center"><strong>Lugar que ocupan 10 amigos en la cola del cine.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="5"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="5"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="5"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="5"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="7">
+          <h4 class="text-center"><strong>Tiempo que se tarda en recorrer 1 Km.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="5"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="5"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="5"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="5"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="8">
+          <h4 class="text-center"><strong>Participantes de una yincana.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="5"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="5"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="5"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="5"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="9">
+          <h4 class="text-center"><strong>Primer apellido de los habitantes de un pueblo.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="5"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="5"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="5"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="5"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="10">
+          <h4 class="text-center"><strong>Pluviosidad de una ciudad.</strong></h4>
+            <br>
+            <div class="opciones">
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="0" name="5"><span class="mdl-radio__label">Variable cualitativa nominal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="1" name="5"><span class="mdl-radio__label">Variable cuantitativa ordinal</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="2" name="5"><span class="mdl-radio__label">Variable cuantitativa discreta</span>
+              </label>
+               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+                <input  type="radio" id="option-1" class="mdl-radio__button" data-index="3" name="5"><span class="mdl-radio__label">Variable cuantitativa continua</span>
+              </label>
+            </div>
+        </div>
+        <div class="page" id="11">
+          <h1>
+            Has finalizado el ejercicio
+          </h1>
+          <h3>Resultados</h3>
+          <h5 id="acertadas" class="text-center">Acertadas</h5>
+          <h5 id="fallidas" class="text-center">Fallidas</h5>
+          <p class="text-center" id="recomendacion"></p>
+          <div class="text-center"><a href="../" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+            Finalizar
+          </a></div>          
+        </div>
+        <hr>
+        <div class="opciones">
+        
+         <label id="btnComprobar" ><!-- Colored mini FAB button -->
+          <button onclick="comprobar();" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored"><i class="material-icons">check</i></button>Comprobar</label>
+           <label id="btnSiguiente"><!-- Colored mini FAB button -->
+          <button onclick="siguiente();" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored"><i class="material-icons">arrow_forward</i></button>Siguiente</label>
+        </div>
     </div>
   </main>
 </div>
 </body>
 </html>
+<script>
+  actualPage = 1;
+  correctas = 0;
+  function siguiente(){
+    actualPage += 1;
+    slidePage("#" + actualPage);
+    if(actualPage == 11){
+        $("#acertadas").text("Has acertado " + correctas + " veces.");
+        $("#fallidas").text("Te has equivocado " + (10 - correctas) + " veces.");
+        $("#btnSiguiente").hide();
+        $("#btnComprobar").hide();
+      }
+  }
+
+  var sltion = [0,1,3,0,2,1,3,2,0,3];
+  function comprobar(){
+    if($("input:checked:visible").length > 0){
+      correcto = false;
+      if($("input:checked:visible").data("index") == sltion[actualPage-1]){
+        correcto = true;
+      }
+      if(correcto){
+        swal({
+          title: "Correcto",
+          text: "",
+          type: "success",
+          timer: "1200"
+        });
+        correctas++;
+      }else{
+         swal({
+          title: "Incorrecto",
+          text: "",
+          type: "error",
+          timer: "1200"
+        });       
+      }
+
+        siguiente();
+    }else{
+      swal("Debes de seleccionar una opción")
+    }
+  }
+</script>
+<style>
+  body{
+    background-color: white;
+  }
+  .opciones{
+    margin: 10px;
+     display:flex;
+     justify-content: center;"
+  }
+
+  .opciones label{
+    margin-right: 20px;
+  }
+
+  hr{
+    border-top: 1px solid lightgray; 
+  }
+
+  h5, h4, h3, h2, h1{
+    margin: 20px 0px;
+    color: #337ab7;
+    text-align:center;
+    font-weight: bolder;
+  }
+
+  .page h4, h1{
+    color: #337ab7;
+  }
+
+  .page h1{
+    color: #337ab7;
+  }
+</style>
