C:\Users\HFG\Documents\preoyectos\mathapp\noveno

--- a/noveno/factorizacion/index.html
+++ b/noveno/factorizacion/index.html
@@ -73,8 +73,14 @@
 	    	<div class="mdl-grid"><!--Inicio de la cuadricula-->
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
-					 	<a href="variables.html" class="list-group-item">1. Factor común</a>
-						
+					 	<a href="factor_comun.html" class="list-group-item">1. Factor común</a>
+						<a href="#" class="list-group-item">2. Diferencias de cuadrados perfectos</a>
+						<a href="#" class="list-group-item">3. Suma y diferencia de cubos</a>
+						<a href="#" class="list-group-item">4. Trinomio de cuadrado perfecto</a>
+						<a href="#" class="list-group-item">5. Trinomio de la forma: ax2+bx + c</a>
+						<a href="#" class="list-group-item">6. Polinomios de la forma: x3 3x2y 3xy2 y3</a>	
+
+
 					</div>
 		    	</div>			
 	    	</div>
@@ -83,11 +89,7 @@
 	    	<div class="mdl-grid"><!--Inicio de la cuadricula-->
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
-					 	<a href="video_variables.html" class="list-group-item">Video variables estadisticas</a>
-						<a href="video_tablas_frecuencia.html" class="list-group-item">Video tablas de frecuencia</a>	
-						<a class="list-group-item" href="video_graficos.html">Gráficos</a>	
-						<a class="list-group-item" href="video_medidas_posicion.html">Medidas de posición</a>
-						<a class="list-group-item" href="video_medidas_dispersion.html">Medidas de dispersión</a>
+					 	<a href="">videos porno</a>
 					</div>
 		    	</div>			
 	    	</div>
