--- a/noveno/factorizacion/factor_comun.html
+++ b/noveno/factorizacion/factor_comun.html
@@ -99,7 +99,8 @@
 					
 			<div class="page" id="tercera">
 			<h4>Factor común monomio</h4>
-			<p>Considere el polinomio <img src="../../img/factorizacion1.jpg"> <br>
+
+			<p>Considere el polinomio  <img src="../../img/factorizacion1.jpg"> <br> <br>	
 			a. Halle el máximo común divisor de los coeficientes. <br> <br>
 			b. Identifique las letras que son comunes a todos los términos del
 			polinomio y tómelas con su menor exponente. <br> <br>
@@ -109,20 +110,25 @@
 			el monomio obtenido en este inciso c). <br><br>
 			d. Factorice el polinomio dado, tomando el monomio encontrado en el
 			inciso c) como un primer factor. ¿Cómo se halla el segundo factor? <br><br>
-			>Repita el ejercicio con el polinomio <img src="../../img/factorizacion2.jpg"> <br>
+			>Repita el ejercicio con el polinomio  <img src="../../img/factorizacion2.jpg"> <br> <br>
 			Un monomio es divisor de otro monomio si el coeficiente del primero es
 			divisor del coeficiente del segundo y cada literal del primero aparece
-			en el segundo monomio con menor o igual exponente. <img src="../../img/factorizacion3.jpg">
+			en el segundo monomio con menor o igual exponente. <br> 
+			El monomio que tiene como coeficiente es el maximo común divisor de los coeficientes de cada uno de los terminos del polonomio y como parte literal las letras comunes presentes en cada termino, cada una de ellas elevadas al menor termino que interviene <img src="../../img/factorizacion3.jpg">
+
+
+			 <br>
 			<h4>Factor común polinomio </h4>
-			<p>Factorizar el polinomio  <img src="../../img/factorizacion4.jpg"> <br>
-			El máximo común divisor de los coeficientes es 6. La letra x aparece en
+			<img src="../../img/factorizacion4.jpg"> <br> <br>
+		<p>	El máximo común divisor de los coeficientes es 6. La letra x aparece en
 			todos los términos del polinomio, la tomamos con su menor exponente.
-			El máximo común divisor de los términos del polinomio es entonces (6x)^-2 
-			Dividimos cada término entre (6x)^-2 y lo expresamos como el producto
-			indicado del cociente por (6x)^-2. <img src="../../img/factorizacion5.jpg"> 
-			Saquemos ahora factor común. <img src="../../img/factorizacion6.jpg">
-			La factorización es:
-			<img src="../../img/factorizacion7.jpg"> 
+			El máximo común divisor de los términos del polinomio es entonces <img src="../../img/factorizacion8.jpg"> Dividimos cada término entre <img src="../../img/factorizacion8.jpg"> y lo expresamos como el producto
+			indicado del cociente por <img src="../../img/factorizacion8.jpg"> <br> <br>
+
+			<img src="../../img/factorizacion5.jpg"> <br> <br>
+			Saquemos ahora factor común.  <br> <br> <img src="../../img/factorizacion6.jpg"> <br> <br>
+			La factorización es: <br> <br>
+			 <img src="../../img/factorizacion7.jpg">  <br> <br>
 			Observe que los términos del segundo factor de la parte derecha, son
 			los que resultan de dividir los términos del polinomio original entre su
 			máximo común divisor.
@@ -155,33 +161,3 @@
 	</main>
 </body>
 </html>
-<style>
-	img{
-		border: 0px solid lightgray;
-		border-radius: 20px;
-		display: block;
-		margin: 20px auto;
-		
-		width: 35%;
-		cursor: pointer;
-	}
-	
-	table{
-		width: 70%;
-		margin: 30 auto;
-	}
-</style>
-<script>
-	$("img").click(function(){
-		$(this).animate(
-			{
-				width: "50%"
-			}, "fast");
-	});
-
-	$("img").mouseleave(function(){
-		$(this).animate({
-			width: "35%"
-		}, 300);
-	});
-</script>
