--- a/noveno/factorizacion/index.html
+++ b/noveno/factorizacion/index.html
@@ -89,7 +89,7 @@
 	    	<div class="mdl-grid"><!--Inicio de la cuadricula-->
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
-					 	<a href="">videos porno</a>
+					 	<a href="">video de</a>
 					</div>
 		    	</div>			
 	    	</div>
