creacion del segundo tema de la tercera unidad

--- a/noveno/conjuntos/index.html
+++ b/noveno/conjuntos/index.html
@@ -36,7 +36,7 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Estadistica</span>
+    <span class="mdl-layout-title">Conjuntos</span>
     <nav class="mdl-navigation">
       	<a class="mdl-navigation__link" href="numeros_reales.html">Números reales</a>
 		<a class="mdl-navigation__link" href="pagina.html">Potencia de base real y exponente entero</a>
@@ -92,7 +92,7 @@
 					 	<a href="video_potenciacion.html" class="list-group-item">Video de potenciación</a>							
 						<a href="video_numeros_reales.html" class="list-group-item">video de Numeros reales</a>
 						<a href="video_base_real_y_exponente_entero.html" class="list-group-item">video de Potencia de base real y exponente entero</a>
-						<a href="video_base_real_y_exponente_racional.html" class="list-group-item">video de Base real con exponente racional</a>6
+						<a href="video_base_real_y_exponente_racional.html" class="list-group-item">video de Base real con exponente racional</a>
 						<a href="video_propiedades_de_radicales.html" class="list-group-item">video de Propiedades de los radicales</a>
 						<a href="video_operaciones_con_radicales.html" class="list-group-item">video de Operaciones con radicales</a>
 					</div>
