--- a/noveno/factorizacion/index.html
+++ b/noveno/factorizacion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Estadística</title>
+	<title>Factorización</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--Jquery load-->
@@ -23,7 +23,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">Estadística</span>
+      <span class="mdl-layout-title">Factorización</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
@@ -36,7 +36,7 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Estadística</span>
+    <span class="mdl-layout-title">Factorización</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="../../">Inicio</a>
       <a class="mdl-navigation__link" href="../">Unidades</a>
@@ -74,8 +74,10 @@
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
 					 	<a href="factor_comun.html" class="list-group-item">1. Factor común</a>
-						<a href="#" class="list-group-item">2. Diferencias de cuadrados perfectos</a>
-						<a href="#" class="list-group-item">3. Suma y diferencia de cubos</a>
+						<a href="Diferencias_cuadrados_perfectos.html" class="list-group-item">2. Diferencias de cuadrados perfectos</a>
+
+						<a href="Suma_y_diferencia_cubos.html" class="list-group-item">3. Suma y diferencia de cubos</a>
+
 						<a href="#" class="list-group-item">4. Trinomio de cuadrado perfecto</a>
 						<a href="#" class="list-group-item">5. Trinomio de la forma: ax2+bx + c</a>
 						<a href="#" class="list-group-item">6. Polinomios de la forma: x3 3x2y 3xy2 y3</a>	
@@ -90,6 +92,12 @@
 		    	<div class="mdl-cell mdl-cell--12-col">
 		    		<div class="list-group">
 					 	<a href="">video de</a>
+
+
+
+
+
+
 					</div>
 		    	</div>			
 	    	</div>
